# Research-Paper-Copilot

./: .gitignore  README.md  main.py  plan.txt  plan_of_action.txt  pyproject.toml  run_pubmed_app.py
app/: main_pubmed_app.py
app/agents/: __init__.py  chroma_storage_agent.py  clarification_agent.py  document_retrieval_agent.py  embeddings_generation_agent.py  generate_summary_agent.py  orchestrator.py  pdf_loader_agent.py  prompt_builder_agent.py  pubmed_agent.py  pubmed_orchestrator.py  response_generation_agent.py  single_paper_orchestrator.py  text_chunking_agent.py
app/chains/: rag_chain.py
app/core/: embedder.py  embedding_generator.py  gemini_client.py  pdf_loader.py  prompt_builder.py  text_splitter.py  vector_storage.py
app/data/: pdf_utils.py
app/retriever/: document_retriever.py
app/retriever/pubmed/: pubmed_client.py  pubmed_parser.py  pubmed_retriever.py
app/ui/: __init__.py  main_app.py  paper_qa_ui.py  pubmed_ui.py  streamlit_ui.py
chroma_db/: chroma.sqlite3
notebooks/: pubmed.ipynb  test_pubmed2.ipynb  tests.ipynb
public/sample_papers/: A_brief_history_of_Pfizer_Central_Research.txt
test/core/: test_pdf_loader.py
test/data/: test_pdf_utils.py
